Fix an issue that pdf is not auto-opened after typing url in omnibox

If a pdf download is triggered from omnibox, we don't auto-open the
file.
This is because the download item doesn't carry the user gesture flag.
However, in most cases the url is typed or the navigation is triggerd by
user.
This CL fixes the issue by identifying these downloads that are initiated
by user.

BUG=622378

Review-Url: https://codereview.chromium.org/2090853002
Cr-Commit-Position: refs/heads/master@{#401672}

Former-commit-id: a06924c6c0170d0007966d0d86a3070a6ca0e717